--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "stylus": "0.42.3",
-    "i18next": "~1.7.10"
+    "i18next": "~1.7.10",
+    "nib": "~1.1.0"
   }
 }
