--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "stylus": "0.42.3",
-    "nodemailer": "~1.3.4"
+    "nodemailer": "~1.3.4",
     "i18next": "~1.7.10",
     "nib": "~1.1.0"
   }
