--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "i18next": "~1.7.10",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "stylus": "0.42.3",
+    "nib": "~1.1.0",
     "nodemailer": "~1.3.4",
-    "i18next": "~1.7.10",
-    "nib": "~1.1.0"
+    "promise": "^7.0.3",
+    "serve-favicon": "~2.2.0",
+    "stylus": "0.42.3"
   }
 }
