--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.0",
-    "cookie-parser": "~1.3.4",
-    "debug": "~2.1.1",
-    "express": "~4.12.2",
-    "i18next": "~1.7.10",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.1",
-    "nib": "~1.1.0",
-    "nodemailer": "~1.3.4",
-    "promise": "^7.0.3",
-    "serve-favicon": "~2.2.0",
-    "stylus": "0.42.3"
+    "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.5",
+    "debug": "^2.1.3",
+    "express": "^4.12.4",
+    "i18next": "^1.7.10",
+    "jade": "^1.9.2",
+    "morgan": "^1.5.3",
+    "nib": "^1.1.0",
+    "nodemailer": "^1.3.4",
+    "promise": "^7.1.1",
+    "serve-favicon": "^2.2.1",
+    "stylus": "^0.42.3"
   }
 }
